dashboard design done

--- a/error.html
+++ b/error.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Residency Success</title>
+        <title>404 Error</title>
     
         <!-- Font Awesome CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -182,40 +182,26 @@
 
 
     <!-- Slider section -->
-     <section class="topSliderSection singlepage passwordResetSlider">
+     <section class="topSliderSectio error">
 
-        <!-- Slider single -->
-        <div class="sliderResidency sicgle_slider z-indexing">
-            <div class="bgLightSlider singlepage"></div>
-            <div class="container">
-                <div class="slider_data singlepage">
-                    <h1 class="title">Lost your password?</h1>
-                    <div class="borderDiv"></div>
+        <div class="container error">
+            <div class="error_main">
+                <div class="slider_dat error text-center">
+                    <h1 class="title error_title">404</h1>
+                    <p class="paragraph error_page">The page you are looking for no longer exists.</p>
+                    <a href="index.html" class="error_btn primary_btn mt-3 mt-lg-4 mx-auto">Go to home</a>
                 </div>
             </div>
         </div>
 
      </section>
 
-    <!-- password reset section -->
-    <section class="passwordresetsection">
-        <div class="container">
-            <div class="passwordresetmain">
-                <form class="password_up">
-                    <p class="paragraph mb-3 mb-lg-4">Please enter your email address. You will receive a link to create a new password via email.</p>
 
-                    <label for="passwordEmail">Email *</label>
-                    <input type="email" name="#" id="passwordEmail" required>
 
-                    <button class="pResetBtn primary_btn mt-3 mt-lg-4">Submit</button>
-                </form>
-                <p class="passResetAmassage paragraph">A password reset email has been sent to the email address on file for your account, but may take several minutes to show up in your inbox. Please wait at least 10 minutes before attempting another reset.</p>
-            </div>
-        </div>
-    </section>
+    
 
     <!-- Footer Section -->
-     <section class="footerSection position-relative">
+     <section class="footerSection">
         <div class="container">
             <div class="footerMain">
 
