--- a/password-reset.html
+++ b/password-reset.html
@@ -207,11 +207,11 @@
                     <div class="newOldPassword">
                         <div class="newOldPassSingle">
                             <label for="passwordEmail">New Password*</label>
-                            <input type="text" name="#" id="passwordEmail" required>
+                            <input type="password" name="#" id="passwordEmail" required>
                         </div>
                         <div class="newOldPassSingle">
-                            <label for="passwordEmail">New Password*</label>
-                            <input type="text" name="#" id="passwordEmail" required>
+                            <label for="passwordEmail">Confirm Password*</label>
+                            <input type="password" name="#" id="passwordEmail" required>
                         </div>
                     </div>
 
