--- a/dashboard.html
+++ b/dashboard.html
@@ -274,6 +274,12 @@
                                         <td>$320</td>
                                         <td>In progress</td>
                                     </tr>
+
+                                    <!-- Single order -->
+                                    <tr>
+                                        <td colspan="2" class="text-end">Total product <b class="ms-2">2</b></td>
+                                        <td colspan="2">Total <b class="ms-2">$3240</b></td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
