--- a/checkout.html
+++ b/checkout.html
@@ -75,7 +75,7 @@
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="services.html" class="desktoplink desktopMlink">
+                                <a href="#" class="desktoplink desktopMlink">
                                     <span>Services</span>
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -153,7 +153,7 @@
                             <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="services.html" class="Mobilelink">
+                            <a href="#" class="Mobilelink">
                                 <span>Services</span>
                                 <i class="fa-solid fa-plus"></i>
                             </a>
@@ -323,7 +323,7 @@
                                     <div class="checkout accordion-item">
                                       <h2 class="accordion-header checkout">
                                         <button class="checkoutAH accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCheck2" aria-expanded="true" aria-controls="collapseCheck2">
-                                          Contact Paper
+                                          Click To fill up the Contract Paper *
                                         </button>
                                       </h2>
                                       <div id="collapseCheck2" class="accordion-collapse collapse" data-bs-parent="#accordionCheckoutCoupon2">
@@ -386,13 +386,13 @@
                                           <button class="checkoutAH accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseRightTwo" aria-expanded="true" aria-controls="collapseRightTwo">
                                               <label class="paymentMethodLabel">
                                                   <input type="radio" name="paymentMethod">
-                                                  <span>Check payments</span>
+                                                  <span>Paypal</span>
                                               </label>
                                           </button>
                                         </h2>
                                         <div id="collapseRightTwo" class="accordion-collapse collapse" data-bs-parent="#accordionCheckoutRight">
                                           <div class="accordion-body">
-                                              <p class="paragraph">Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
+                                              <p class="paragraph">Please submit uor mayment by paypal</p>
                                           </div>
                                         </div>
                                     </div>
@@ -402,13 +402,13 @@
                                           <button class="checkoutAH accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseRightThree" aria-expanded="true" aria-controls="collapseRightThree">
                                               <label class="paymentMethodLabel">
                                                   <input type="radio" name="paymentMethod">
-                                                  <span> Cash on delivery</span>
+                                                  <span>Stripe</span>
                                               </label>
                                           </button>
                                         </h2>
                                         <div id="collapseRightThree" class="accordion-collapse collapse" data-bs-parent="#accordionCheckoutRight">
                                           <div class="accordion-body">
-                                              <p class="paragraph">Pay with cash upon delivery.</p>
+                                              <p class="paragraph">Please submit uor mayment by Stripe</p>
                                           </div>
                                         </div>
                                     </div>
