--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="services.html" class="desktoplink desktopMlink">
+                                <a href="#" class="desktoplink desktopMlink">
                                     <span>Services</span>
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -153,7 +153,7 @@
                             <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="services.html" class="Mobilelink">
+                            <a href="#" class="Mobilelink">
                                 <span>Services</span>
                                 <i class="fa-solid fa-plus"></i>
                             </a>
@@ -352,7 +352,7 @@
                             <div class="serviceSingleInnerDataNew ">
                                 <h3 class="sub_title2">USMLE Tutoring</h3>
                                 <p class="paragraph">USMLE: This program is designed for future residents who have attempts, failures or just need to brush up on their test-taking skills.​</p>
-                                <a class=" primary_btn" href="match-application.html">Read More</a>
+                                <a class=" primary_btn" href="usmle-tutoring.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -366,7 +366,7 @@
                             <div class="serviceSingleInnerDataNew ">
                                 <h3 class="sub_title2">Curriculum Vitae Review</h3>
                                 <p class="paragraph">The CV review is conducted with you via a targeted intake form, then we will review, make recommendations, and edit the documents with your feedback.</p>
-                                <a class=" primary_btn" href="match-application.html">Read More</a>
+                                <a class=" primary_btn" href="curriculum-vitae.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -380,7 +380,7 @@
                             <div class="serviceSingleInnerDataNew ">
                                 <h3 class="sub_title2">Personal Statement Review</h3>
                                 <p class="paragraph">Our approach is personalized to overcome your weaknesses. We have interviewed 100’s of future residents and fellows in University-based programs.</p>
-                                <a class=" primary_btn" href="match-application.html">Read More</a>
+                                <a class=" primary_btn" href="personal-statement.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -394,7 +394,7 @@
                             <div class="serviceSingleInnerDataNew ">
                                 <h3 class="sub_title2">Interview Preparation</h3>
                                 <p class="paragraph">Our approach is personalized to overcome your weaknesses. We have interviewed 100’s of future residents and fellows in University-based programs who have matched successfully.</p>
-                                <a class=" primary_btn" href="match-application.html">Read More</a>
+                                <a class=" primary_btn" href="services.html">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -408,7 +408,7 @@
                             <div class="serviceSingleInnerDataNew ">
                                 <h3 class="sub_title2">Additional Services</h3>
                                 <p class="paragraph">These plans are designed for the future residents who either want to maximize their journey through a comprehensive bundling of our key services Platinum Plan.</p>
-                                <a class=" primary_btn" href="match-application.html">Read More</a>
+                                <a class=" primary_btn" href="additional-services.html">Read More</a>
                             </div>
                         </div>
                     </div>
