--- a/interview-preparation.html
+++ b/interview-preparation.html
@@ -75,7 +75,7 @@
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="services.html" class="desktoplink desktopMlink">
+                                <a href="#" class="desktoplink desktopMlink">
                                     <span>Services</span>
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -153,7 +153,7 @@
                             <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="services.html" class="Mobilelink">
+                            <a href="#" class="Mobilelink">
                                 <span>Services</span>
                                 <i class="fa-solid fa-plus"></i>
                             </a>
@@ -391,27 +391,27 @@
                     <!-- Service single -->
                     <div class="otherservicesingle">
                         <div class="servicesImg">
-                            <a href="#" class="otherserviceimg">
+                            <a href="usmle-tutoring.html" class="otherserviceimg">
                                 <div class="overly"></div>
                                 <img src="./assets/images/servises/tips-and-tricks.jpg" alt="Service img">
                             </a>
                         </div>
-                        <a href="#" class="sub_title2">USMLE Tutoring</a>
+                        <a href="usmle-tutoring.html" class="sub_title2">USMLE Tutoring</a>
                         <p class="paragraph">Our approach is personalized to overcome your weaknesses. We have interviewed 100’s of future residents and fellows in University-based programs who have matched successfully.</p>
-                        <a class="primary_btn smallBtn" href="#">Details</a>
+                        <a class="primary_btn smallBtn" href="usmle-tutoring.html">Details</a>
                     </div>
 
                     <!-- Service single -->
                     <div class="otherservicesingle">
                         <div class="servicesImg">
-                            <a href="#" class="otherserviceimg">
+                            <a href="usmle-tutoring.html" class="otherserviceimg">
                                 <div class="overly"></div>
                                 <img src="./assets/images/servises/tips-and-tricks.jpg" alt="Service img">
                             </a>
                         </div>
-                        <a href="#" class="sub_title2">USMLE Tutoring</a>
+                        <a href="usmle-tutoring.html" class="sub_title2">USMLE Tutoring</a>
                         <p class="paragraph">Our approach is personalized to overcome your weaknesses. We have interviewed 100’s of future residents and fellows in University-based programs who have matched successfully.</p>
-                        <a class="primary_btn smallBtn" href="#">Details</a>
+                        <a class="primary_btn smallBtn" href="usmle-tutoring.html">Details</a>
                     </div>
 
                     <!-- Service single -->
