--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="services.html" class="desktoplink desktopMlink">
+                                <a href="#" class="desktoplink desktopMlink">
                                     <span>Services</span>
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -153,7 +153,7 @@
                             <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="services.html" class="Mobilelink">
+                            <a href="#" class="Mobilelink">
                                 <span>Services</span>
                                 <i class="fa-solid fa-plus"></i>
                             </a>
@@ -289,6 +289,17 @@
                         <label for="cTextarea" class="contact_form_label">How can we help you?</label>
                         <textarea id="cTextarea"></textarea>
                         <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+                        
+                        <div class="googlecapcha">
+                            <input type="checkbox" name="#" id="googleCapcha">
+                            <label for="googleCapcha">I'm not a robot</label>
+                            <div class="googleInon">
+                                <img src="./assets/images/servises/images-removebg.png" alt="">
+                                <div class="privacy">
+                                    <a href="#">Privacy</a> - <a href="#">Terms</a>
+                                </div>
+                            </div>
+                        </div>
                         <button class="primary_btn">Submit</button>
                     </form>
                 </div>
