--- a/dashboard.html
+++ b/dashboard.html
@@ -75,7 +75,7 @@
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="services.html" class="desktoplink desktopMlink">
+                                <a href="#" class="desktoplink desktopMlink">
                                     <span>Services</span>
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -153,7 +153,7 @@
                             <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="services.html" class="Mobilelink">
+                            <a href="#" class="Mobilelink">
                                 <span>Services</span>
                                 <i class="fa-solid fa-plus"></i>
                             </a>
@@ -214,7 +214,7 @@
 
         <!-- Slider single -->
         <div class="sliderResidency sicgle_slider">
-            <div class="bgLightSlider singlepage"></div>
+            <div class="bgLightSlider singlepage myAcount"></div>
             <div class="container">
                 <div class="slider_data singlepage">
                     <h1 class="title">My account</h1>
