--- a/services.html
+++ b/services.html
@@ -75,7 +75,7 @@
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="services.html" class="desktoplink desktopMlink">
+                                <a href="#" class="desktoplink desktopMlink">
                                     <span>Services</span>
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -153,7 +153,7 @@
                             <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="services.html" class="Mobilelink">
+                            <a href="#" class="Mobilelink">
                                 <span>Services</span>
                                 <i class="fa-solid fa-plus"></i>
                             </a>
