--- a/about-us.html
+++ b/about-us.html
@@ -230,7 +230,8 @@
     <section class="ceo_section mt-4">
         <div class="container">
             <div class="ceo_main">
-                <h2 class="sub_title text-center mb-4 mb-lg-5">Meet The CEO</h2>
+                <h2 class="sub_title text-center">Meet The CEO</h2>
+                <div class="aftercolor"></div>
                 <div class="ceo_inner row">
                     <div class="ceo_left col-lg-6 pe-lg-5">
                         <p class="paragraph">An IMG herself, Dr. Datta is currently at a major academic center in New York as a Clinical Assistant Professor and a Concussion expert in Neurology. She attended medical school at St. James School of Medicine in the Netherlands, Antilles, and completed her Neurology residency at Hackensack University in New Jersey. In addition, she was the Inaugural Sports Neurotrauma Fellow at the University of Florida under the tutelage of renowned concussion and brain injury experts. She has years of experience guiding medical students, residents, and future fellowship hopefuls through the MATCH process.</p>
@@ -256,7 +257,8 @@
                         <img src="./assets/images/aboutus/img001-21-1-1024x683.jpg" alt="">
                     </div>
                     <div class="ceo_left col-lg-6 ps-lg-5">
-                        <h2 class="sub_title mb-5">Our Mission</h2>
+                        <h2 class="sub_title">Our Mission</h2>
+                        <div class="aftercolor"></div>
                         <p class="paragraph">The cultural differences and expectations are just some things most candidates are not prepared to tackle as they begin their MATCH journey. At Residency Success, we are here to guide you, to mentor you, and to prepare you to reach that most desired goal. We are mostly a team of doctors, who have been in your shoes, and also understand that this process can be financially challenging; hence, our goal is to offer you the services that you need at the most reasonable prices.</p>  
                     </div>
                     
@@ -272,7 +274,8 @@
                 
                 <div class="ceo_inner vission  row">
                     <div class="ceo_left bgChange col-lg-6 pe-lg-5">
-                        <h2 class="sub_title mb-5">What We Do</h2>
+                        <h2 class="sub_title">What We Do</h2>
+                        <div class="aftercolor"></div>
                         <p class="paragraph">Residency Success was founded by an IMG like yourself. Shae Datta, MD completed her medical education at a smaller offshore Carribean Medical school. Like they say, “easy to get on the Island but harder to get off.” She faced an uphill battle while completing USMLEs, enduring a lot of misinformation that added undue stress to her MATCH journey. She quickly realized that a need existed for all IMG graduates to get the proper guidance and mentorship while navigating the tiring but rewarding journey of USMLE to Residency.</p>  
                     </div>
                     <!-- <div class="ceo_right col-lg-6">
@@ -287,7 +290,8 @@
      <section class="whyus_section sectionPadding position-relative">
         <div class="container">
             <div class="whyus_main">
-                <h2 class="sub_title mb-5 text-center">Why us</h2>
+                <h2 class="sub_title text-center">Why us</h2>
+                <div class="aftercolor"></div>
                 <div class="whyus_inner row row-gap-4 row-gap-lg-5">
 
                     <!-- Why us single -->
@@ -335,7 +339,8 @@
     <section class="team_section sectionPadding">
         <div class="container">
             <div class="team_main">
-                <h2 class="sub_title text-center mb-5">Meet The Team</h2>
+                <h2 class="sub_title text-center">Meet The Team</h2>
+                <div class="aftercolor"></div>
                 <div class="team_inner">
 
                     <!-- Team Single -->
