--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,8 @@
      <section class="contact_form_section">
         <div class="container">
             <div class="contact_form_main">
-                <h2 class="sub_title text-center mb-4 mb-lg-5">Contact us</h2>
+                <h2 class="sub_title text-center">Contact us</h2>
+                <div class="aftercolor"></div>
                 <div class="contact_form_inner">
                     <p class="paragraph">Schedule A Free Consultation Call With Our Client Relations Team* To Discuss If Residency Success Can Support You During Your MATCH Journey.</p>
                     <p class="boldParagraph">* Please complete the form below so that we know how to best assist you during the call.</p>
