--- a/faqs.html
+++ b/faqs.html
@@ -230,8 +230,8 @@
      <section class="faqs_section">
         <div class="container">
             <div class="faqs_main">
-                <h2 class="sub_title mb-4 mb-lg-5 text-center">Frequently Asked Questions</h2>
-            
+                <h2 class="sub_title text-center">Frequently Asked Questions</h2>
+                <div class="aftercolor"></div>
                 <div class="faqs_inner">
                     <p class="paragraph mb-3 mb-lg-4">New to Residency Success? Here are a few questions we get the most. If you don’t see what’ on your mind, reach out to us anytime via phone or email.</p>
                     <p class="paragraph mb-3 mb-lg-4">In the era of technology what is getting eroded is the old-fashioned family system. Traveling or holidaying with the family is one sure way to ensure being connected and bonded with each other. It is so true that families that holiday together stay together.</p>
