--- a/interview-preparation.html
+++ b/interview-preparation.html
@@ -229,7 +229,7 @@
      <section class="product_details_section">
         <div class="container">
             <h2 class="sub_title interview">Mock interviews are broken down into Basic Interview Skills, Behavioral Interview Tactics, and Clinical Questions.</h2>
-            
+            <div class="aftercolor"></div>
             <div class="product_details_main row">
                 <div class="product_details_left col-lg-6">
                     <div class="product_image_main mb-4 mb-lg-0">
@@ -383,7 +383,8 @@
     <section class="services_section match sectionPadding">
         <div class="container">
             <div class="service_main otherService">
-                <h2 class="sub_title text-center mb-4 mb-lg-5">Others Services</h2>
+                <h2 class="sub_title text-center ">Others Services</h2>
+                <div class="aftercolor"></div>
 
                 <!-- Service body -->
                 <div class="otherServiceApplication">
