--- a/mentorship.html
+++ b/mentorship.html
@@ -229,7 +229,8 @@
     <section class="mentor_choose_section">
         <div class="container">
             <div class="mentor_choose_main">
-                <h2 class="sub_title mb-5 text-center">Choose your plan</h2>
+                <h2 class="sub_title text-center">Choose your plan</h2>
+                <div class="aftercolor"></div>
 
                 <div class="mentor_choose_inner">
 
@@ -494,8 +495,8 @@
     <section class="services_section sectionPadding">
         <div class="container">
             <div class="service_main">
-                <h2 class="sub_title text-center mb-4 mb-lg-5">Others Services</h2>
-
+                <h2 class="sub_title text-center">Others Services</h2>
+                <div class="aftercolor"></div>
                 <!-- Service body -->
                 <div class="service_body row row-gap-4 row-gap-lg-5">
 
