--- a/partners.html
+++ b/partners.html
@@ -261,7 +261,8 @@
     <section class="partner_valuSection">
         <div class="container">
 
-            <h2 class="sub_title text-center mb-3 mb-lg-4">Our Valued Partners</h2>
+            <h2 class="sub_title text-center ">Our Valued Partners</h2>
+            <div class="aftercolor"></div>
             <div class="partner_valueMain row">
                 <div class="col-lg-4">
                     <div class="partner_single text-center p-3 my-auto">
@@ -289,7 +290,8 @@
     <section class="combo_valuSection sectionPadding">
         <div class="container">
             <div class="combo_valueMain">
-                <h2 class="sub_title text-center mb-3 mb-lg-4">Our Combo Plans</h2>
+                <h2 class="sub_title text-center ">Our Combo Plans</h2>
+                <div class="aftercolor"></div>
                 <div class="combo_plan_inner row">
 
                     <!-- Combo plan Single -->
@@ -375,8 +377,8 @@
      <section class="services_inner_section sectionPadding">
         <div class="container">
             <div class="services_inner_main">
-                <h2 class="sub_title mb-3 mb-lg-4 text-center">Our Services</h2>
-
+                <h2 class="sub_title  text-center">Our Services</h2>
+                <div class="aftercolor"></div>
                 <!-- Services inner -->
                 <div class="services_inner_body row">
 
