--- a/additional-services.html
+++ b/additional-services.html
@@ -229,7 +229,7 @@
      <section class="product_details_section">
         <div class="container">
             <h2 class="sub_title additional">Consider these a-la-carte services to round out your journey to Residency MATCH</h2>
-            
+            <div class="aftercolor"></div>
             <!-- <div class="product_details_main">
                 <div class="product_details_left col-lg-6">
                     <div class="product_image_main mb-4 mb-lg-0">
@@ -396,7 +396,8 @@
     <section class="services_section match sectionPadding">
         <div class="container">
             <div class="service_main otherService">
-                <h2 class="sub_title text-center mb-4 mb-lg-5">Others Services</h2>
+                <h2 class="sub_title text-center">Others Services</h2>
+                <div class="aftercolor"></div>
 
                 <!-- Service body -->
                 <div class="otherServiceApplication">
