--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="successMain">
                 
                 <div class="successTitle sectionTitle">
-                    <h2 class="sub_title">Welcome to Residency Success</h2>
+                    <h2 class="sub_title new">Welcome to Residency Success</h2>
                     <p class="titleParagraph">Research, Rotations & MATCH Guidance Along With <a class="TPlink" href="#">Our Collaborating Partners.</a></p>
                 </div>
 
@@ -324,8 +324,8 @@
     <section class="services_section sectionPadding" id="services">
         <div class="container">
             <div class="service_main">
-                <h2 class="sub_title text-center mb-4 mb-lg-5">Our Services</h2>
-
+                <h2 class="sub_title text-center ">Our Services</h2>
+                <div class="aftercolor"></div>
                 <!-- Service body -->
                 <div class="service_body row row-gap-4 row-gap-lg-5">
 
@@ -529,7 +529,8 @@
      <section class="clientTestmonialSection sectionPadding">
         <div class="container">
             <div class="clientTestmonialMain">
-                <h2 class="sub_title text-center mb-4 mb-sm-5">Client Testimonials</h2>
+                <h2 class="sub_title text-center">Client Testimonials</h2>
+                <div class="aftercolor"></div>
                 <div class="clientTestimonialInner testimonialSlider row">
                     <!-- Testimonial Single -->
                     <div class="clientTestimonialSingle p-2">
@@ -610,6 +611,7 @@
                 <!-- Achievement Left -->
                 <div class="achievementLeft">
                     <h2 class="sub_title">Our Achievements</h2>
+                    <div class="aftercolor"></div>
                     <p class="Achievparagraph mb-4 mb-lg-5">The ones who are crazy enough to think they can change the world, are the ones that do.</p>
                 
                     <div class="achievementInnerC">
