--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
 
                 <!-- Footer bottom -->
                 <div class="footertop">
-                    <p class="footerBcontent">DESIGN AND DEVELOPED BY NOVA DESIGNS</p>
+                    <p class="footerBcontent">DESIGN AND DEVELOPED BY <a href="#" target="_blank">NOVA DESIGNS</a></p>
                 </div>
             </div>
         </div>
