active class added done

--- a/augth.html
+++ b/augth.html
@@ -69,7 +69,7 @@
                     <div class="desktop_menubar d-none d-lg-block">
                         <ul class="desktopMlist">
                             <li class="desktop_mItem">
-                                <a href="/" class="desktopMlink active">Home</a>
+                                <a href="index.html" class="desktopMlink">Home</a>
                             </li>
                             <li class="desktop_mItem">
                                 <a href="about-us.html" class="desktopMlink">About Us</a>
@@ -302,9 +302,6 @@
     <section class="footerSection position-relative">
         <div class="container">
             <div class="footerMain">
-
-                <!-- Footer Top -->
-                <!-- <div class="footertop">
                     <a href="{% url 'home' %}">
                         <div class="footerTleft">
                             <img src="{% static './images/logo/Blue.png' %}" alt="">
@@ -356,9 +353,9 @@
 
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Packages</h4>
-                        <a href="mentorship.html" class="footerLinks">Basic Plan</a>
-                        <a href="mentorship.html" class="footerLinks">Platinum Plan</a>
-                        <a href="mentorship.html" class="footerLinks">Platinum Plus</a>
+                        <a href="basic-plan.html" class="footerLinks">Basic Plan</a>
+                        <a href="plutinam-plan.html" class="footerLinks">Platinum Plan</a>
+                        <a href="plutinum-plas.html" class="footerLinks">Platinum Plus</a>
                     </div>
 
                     <div class="fiiterMiddleSingle">
