--- a/cart.html
+++ b/cart.html
@@ -284,9 +284,6 @@
     <section class="footerSection position-relative">
         <div class="container">
             <div class="footerMain">
-
-                <!-- Footer Top -->
-                <!-- <div class="footertop">
                     <a href="{% url 'home' %}">
                         <div class="footerTleft">
                             <img src="{% static './images/logo/Blue.png' %}" alt="">
@@ -338,9 +335,9 @@
 
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Packages</h4>
-                        <a href="mentorship.html" class="footerLinks">Basic Plan</a>
-                        <a href="mentorship.html" class="footerLinks">Platinum Plan</a>
-                        <a href="mentorship.html" class="footerLinks">Platinum Plus</a>
+                        <a href="basic-plan.html" class="footerLinks">Basic Plan</a>
+                        <a href="plutinam-plan.html" class="footerLinks">Platinum Plan</a>
+                        <a href="plutinum-plas.html" class="footerLinks">Platinum Plus</a>
                     </div>
 
                     <div class="fiiterMiddleSingle">
