--- a/plutinam-plan.html
+++ b/plutinam-plan.html
@@ -705,6 +705,9 @@
     <section class="footerSection position-relative">
         <div class="container">
             <div class="footerMain">
+
+                <!-- Footer Top -->
+                <!-- <div class="footertop">
                     <a href="{% url 'home' %}">
                         <div class="footerTleft">
                             <img src="{% static './images/logo/Blue.png' %}" alt="">
