--- a/contact.html
+++ b/contact.html
@@ -310,7 +310,7 @@
 
 
     <!-- Contact bottom -->
-     <section class="contact_bottom">
+     <!-- <section class="contact_bottom">
         <div class="container">
             <div class="contact_bottom_inner">
                 <div class="cMobileDiv">
@@ -338,7 +338,7 @@
             </div>
         </div>
      </section>
-    
+     -->
 
     <!-- Footer Section -->
     <section class="footerSection position-relative">
