--- a/curriculum-vitae.html
+++ b/curriculum-vitae.html
@@ -381,7 +381,7 @@
     <!-- Footer Section -->
     <section class="footerSection position-relative">
         <div class="container">
-            <div class="footerMain">
+                <!-- <div class="footerMain">
                     <a href="{% url 'home' %}">
                         <div class="footerTleft">
                             <img src="{% static './images/logo/Blue.png' %}" alt="">
@@ -406,7 +406,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div> --> -->
 
                 <!-- Footer middle -->
                 <div class="footerMiddle">
