--- a/interview-preparation.html
+++ b/interview-preparation.html
@@ -464,7 +464,7 @@
     <!-- Footer Section -->
     <section class="footerSection position-relative">
         <div class="container">
-            <div class="footerMain">
+                <!-- <div class="footerMain">
                     <a href="{% url 'home' %}">
                         <div class="footerTleft">
                             <img src="{% static './images/logo/Blue.png' %}" alt="">
@@ -489,7 +489,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div> --> -->
 
                 <!-- Footer middle -->
                 <div class="footerMiddle">
