--- a/contact.html
+++ b/contact.html
@@ -310,7 +310,7 @@
 
 
     <!-- Contact bottom -->
-     <!-- <section class="contact_bottom">
+     <section class="contact_bottom">
         <div class="container">
             <div class="contact_bottom_inner">
                 <div class="cMobileDiv">
@@ -338,12 +338,12 @@
             </div>
         </div>
      </section>
-     -->
+    
 
     <!-- Footer Section -->
     <section class="footerSection position-relative">
         <div class="container">
-            <div class="footerMain">
+                <!-- <div class="footerMain">
                     <a href="{% url 'home' %}">
                         <div class="footerTleft">
                             <img src="{% static './images/logo/Blue.png' %}" alt="">
@@ -368,7 +368,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div> --> -->
 
                 <!-- Footer middle -->
                 <div class="footerMiddle">
